Archive2/30/0d78e0f9898764/output
main.cpp:6:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:9:15: warning: ignoring return value of 'int system(const char*)', declared with attribute warn_unused_result [-Wunused-result]
     system("");
               ^
